# gorest-api-test

./: .env.example  .gitignore  README.md  config.ini  main.py  pyproject.toml  pytest.ini
application/: user_client.py
application/payload/: user_payload.py
core/api/: api_client.py
core/config/: __init__.py  config_manager.py
core/http/: __init__.py  http_adapter.py  retry_strategy.py
core/retry/: __init__.py  backoff_strategy.py  retry_config.py  retry_handler.py
core/utils/: http_logger.py
tests/: conftest.py  environment_variables.py  test_gorest_crud.py  test_users_collection.py
tests/user/: conftest.py  test_user_resource.py
